--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Arial, Helvetica, sans-serif , sans-serif;
 }
 
 body {
@@ -61,7 +61,7 @@ body {
     align-items: center;
     padding: 95px;
   }
-    .form-box h2 {
+ h2 {
     color: rgb(32, 21, 95);
     text-align: center;
     font-size: 30px;
@@ -179,7 +179,7 @@ box-shadow: 3px 0 10px rgb(32, 21, 95);
       position: absolute;
       text-align: center;
       padding: 10px 80px 150px 80px;
-      height: 550px;
+      height: 630px;
       color: black;
     }
      .popup ion-icon {
@@ -223,22 +223,24 @@ box-shadow: 3px 0 10px rgb(32, 21, 95);
 
      @media only screen and (max-width: 900px) {
       header , .footer {
-        width: 100vw;
+        width: 260px;
       }
       main {
-        max-width: inherit;
+        width: 260px;
       }
       body {
-        width: 160px;
+        width: 260px;
       }
-      #welcome   {       display: none;
+      #welcome   { 
+              display: none;
 
         } 
       .form-box {
-        width: 250px;
-        justify-content: center;
-        align-items: center;
-        padding-top: 0;
+        width: 250px; 
+        margin-right: 180px;
+        padding-right: 250px;
+        padding-left: 250px;
+
       }
 
     .container{
@@ -246,44 +248,36 @@ box-shadow: 3px 0 10px rgb(32, 21, 95);
         justify-content: center;
         align-items: center;
     } 
- .form-box > .image {
-  display: none;
-      }
-      .popup{
-        width: 140px;
-          justify-content: right;
-          align-items: right;
-          top: 0;
-                    left: -90%;
-          transform: translate(-50%, 50%) scale(0);
-      } 
+     
     }
 
     @media only screen and (max-width: 412px) {
       header , .footer {
-        width: 100vw;
+        width: 350px;
       }
       main {
-        max-width: 130px;
+        width: 350px;
         
       }
       body {
-        width: 130px;
+        width: 350px;
       }
        #welcome {
        display: none;
         } 
       .form-box {
         width: 140px;
-        float: right; 
+        padding: 5px;
         top: 0;
-        left: -90%;
+        left: -50%;
         }
-.popup{
-  width: 140px;
-  
-  left: -90%; 
-} 
+        .container {
+          width: 140px;
+          padding-right: 50%;
+          top: 0;
+          left: -50%;
+          }
+
     .container{
       width: 140px;
         justify-content: right;
@@ -293,6 +287,15 @@ box-shadow: 3px 0 10px rgb(32, 21, 95);
  .form-box > .image {
   display: none;
       }
+      .input-box {
+         justify-content: space-between;
+      }
+      .container > .ion-icon {
+        padding-right: 10px;
+      }
+      form {
+        padding-left: 10vw;
+      } 
     }
 
     @media only screen and (max-width: 1280px) {
@@ -314,18 +317,33 @@ box-shadow: 3px 0 10px rgb(32, 21, 95);
         justify-content: center;
         align-items: center;
       }
-      .popup{
-        width: 140px; 
-        left: 90%; 
-          transform: translate(-50%, 50%) scale(0);
-      } 
     .container{
+      padding-left: 50vw;
       width: 640px;
         justify-content: center;
         align-items: center;
     } 
+    
+    .container ion-icon {
+      padding-right: 15PX;
+    }
  .form-box > .image {
-  width: 100vw;
-  float: right;
+  width: 30vw;
+  padding-left: 35px;
+
+      }
+      form {
+        padding-right: 10vw;
+      } 
+      .footer {
+        padding-bottom: 30px;
+      }
+      .group span a {
+        color: rgb(32, 21, 95);
+        position: relative;
+        top: 10px;
+        padding: 8px;
+        text-decoration: none;
+        font-weight: 500;
       }
     }
